assets/src/sass/main.scss
/* ... */
.contacts_feedback_fixed_btn {
    font-family: "Roboto", sans-serif;
    -moz-transform: rotate(270deg);
    -webkit-transform: rotate(270deg);
    -o-transform: rotate(270deg);
    transform: rotate(270deg);
    font-size: .8em;
    position: fixed;
    top: 50vh;
    right: -73px;
    width: 193px;
    height: 45px;
    margin: 0;
    padding-top: 8px;
    min-width: 193px;
    min-height: 57px;
    -webkit-transition: all .1s linear;
    -moz-transition: all .1s linear;
    -o-transition: all .1s linear;
    transition: all .1s linear;
    display: inline-block; 


    @media only screen and (min-width: 1150px) {
      & {
        width: 205px;
        right: -78px !important;
      }

      &:hover {
        right: -74px !important;
      }
    }


    &:hover {
      right: -69px;
      -webkit-transition: all .1s linear;
      -moz-transition: all .1s linear;
      -o-transition: all .1s linear;
      transition: all .1s linear;
    }
}

.remodal-close {
  left: auto !important;
  right:  0 !important;
}

.remodal-wrapper {
      z-index: 11111 !important;
}

.remodal-overlay {
    z-index: 11111 !important;
}

.modal_feedback {
  & div {
    margin-bottom: 1em;
  }
}

.blog_block {
  // outline: 1px solid red;
  margin-bottom: 3rem;

  &:last-child {
    margin-bottom: 0;
  }
} 



// ===================

%provans_fade {
	&:before {
		background-color: rgba(0,0,0,0.6);
		-webkit-transition: background 0.3s ease;
		-moz-transition: background 0.3s ease;
		-ms-transition: background 0.3s ease;
		-o-transitiozn: background 0.3s ease;
		transition: background 0.3s ease;
	}

	&:hover:before {
		background-color: rgba(0,0,0,0.4);
		-webkit-transition: background 0.3s ease;
		-moz-transition: background 0.3s ease;
		-ms-transition: background 0.3s ease;
		-o-transitiozn: background 0.3s ease;
		transition: background 0.3s ease;
	}
}




.provans {
	&__block {
		height: 300px;
		background: transparent center center no-repeat;
		background-size: cover;
		text-align: center;
		position: relative;

		&:before {
			content: '';
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			@extend %provans_fade;
		}

    &.-category {
      
      &.-main {
        height: 449px;
        &:before {
          content: normal;
        }

        &:after {
          content: '';
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          background-color: rgba(0,0,0,0.3);
        }
      }

      &.-small {
        height: 210px;

        &.-top {
          margin-bottom: 2em;
        }
      }
    }

		&-title {
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			font-family: 'Roboto', sans-serif;
			color: #fff;
			text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
			// font-size: 2.5rem;
      z-index: 5;


      &.-newlh {
        & a, & span {
          line-height: 449px;
        }
      }

			& a,
      & span {
				position: absolute;
				width: 100%;
				height: 100%;
				@include center(xy);
        line-height: 300px;

      }

      &.-small {
        & a {
          line-height: 210px;
        }
      }


		}
	}
  
  &__interest {
    margin-top: 5em;
  }

	&__cats {
		&-mainpic{
			max-width: 100%;
		}

    &-bottom {
      margin-top: 2em;
    }
	}

  &__item {
    &-mainblock, &-rakurs {
      background: transparent center center no-repeat;
      background-size: cover;
    }

    &-mainblock {
      height: 300px;

      &.-inside {
        height: 418px;

        
        @media only screen and (max-width: 1150px) {
            & {
              height: 400px;
            }
        }

      }
    }

    &-rakurswrap {
      // margin-top: 0.8em !important;
    }

    &-rakurs {
      height: 215px;
      cursor: pointer;

        @media screen and (max-width: 1150px) {
          & {
            height: 190px;
          }
        }

    }

    &-title {
      // text-transform: none;

      &.-price {
        & span {
          padding: 5px;
          font-size: 1.5em;
          background-color: yellow;
        }
      }
    }

    &-colorwrap {
      margin-bottom: 1.3em;
      &:after {
          content: "";
          display: table;
          clear: both;
          zoom: 1;
      }
    }

    &-color {
      float: left;
      width: 20px;
      height: 20px;
      margin-right: 5px;
      cursor: pointer;
    }
  }
}



.blog {
	&__single {
		&-picwrap {
			// text-align: center;
			// max-width: 55% !important;
			& img {
				// max-width: 100%;
				height: auto !important;
			}
		}
	}
}


.feedback {
  z-index: 999;
  background-color: #DD231D;
  border-radius: 50%;
  height: 70px;
  width: 70px;
   position: fixed;
  right: 50px;
  bottom: 30px;
  -webkit-transition: 0.6s;
   transition: 0.6s;
}
.feedback:hover {
  cursor: pointer;
  background-color: #E7504B;
   -webkit-transform: scale(1.1, 1.1);
   transform: scale(1.1, 1.1);
   -webkit-transform: background-color 0.5s ease;
   transform: background-color 0.5s ease;
}
.feedback .fa {
  /* horizontally-center item */
  text-align: center;
  width: 100%;

  /* vertically-center item   */
  height: 100%;
  line-height: 70px;
  
  /* item properties */
  font-size: 40px;  
  color: white;

  /* animations */
   -webkit-transition: 0.6s;
   transition: 0.6s;
}
.feedback:hover .fa { 
   -webkit-transition: 0.6s;
   transition: 0.6s;
   -webkit-transform: rotateY(360deg);
   transform: rotateY(360deg);
}


.feedback-box {
  z-index: 999;
  width: 200px;
  border-radius: 10px;
  background-color: #DD231D;
   position: fixed;
  bottom: 80px;
  right: 20px;
  padding: 2px;
}
.feedback-box .feedback-segment {
  margin: 2px;
  height: 50px;
  background-color: #CC1A14;
  padding: 2px;
  line-height:25px;
  font-family: "Segoe UI";
  font-size: 1em;
  color: white;
}
.feedback-box .feedback-segment.first {
  border-radius: 10px 10px 0px 0px;
}
/* ... */

